Moved debug panel to bottom left corner to avoid overlap with Bugherd and the Chat With Us bubble

--- a/src/sass/themes/wwf.scss
+++ b/src/sass/themes/wwf.scss
@@ -481,9 +481,10 @@
   }
 
   .debug-panel {
-    bottom: 70px;
-    right: 20px;
+    bottom: 14px;
+    left: 14px;
     transform: scale(0.8);
+    transform-origin: bottom left;
 
     // &:not(.debug-panel--open) {
     //   // background-color: #e98300;
